# gsy-ew-proxy-library

./: README.md  pyproject.toml
gsy_ew_proxy/: ewcg_connection.py  ewcg_strategy.py
tests/: test_ewcg_connection.py  test_ewcg_external_strategy.py
